# db-manager

./: .envrc  Cargo.toml  README.md  Rocket.toml  docker-compose.yml
codegen/: Cargo.toml
codegen/src/: lib.rs  test_stand.rs
db-manager/: Cargo.toml
db-manager/src/: error.rs  lib.rs  manager.rs  rocket_integration.rs
db-manager/tests/: end-to-end.rs
lib/: Cargo.toml
lib/src/: lib.rs  test_stand.rs  test_stand_pool.rs
lib/tests/: integration.rs
migrations/: 20220703152653_create_sample_schema.sql
rocket-example/: Cargo.toml  Rocket.toml  init_db.sh
rocket-example/migrations/2020-01-23-143024_create_todo_table/: down.sql  up.sql
rocket-example/src/: db.rs  lib.rs  model.rs  schema.rs  todo.rs
rocket-example/tests/: integration.rs
scripts/: init-db.sh
src/: lib.rs  manager.rs
supply-chain/: config.toml
tests/: end-to-end.rs
